--- a/.gitignore
+++ b/.gitignore
@@ -181,6 +181,7 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file. However, if you prefer, 
 #  you could uncomment the following to ignore the entire vscode folder
 # .vscode/
+simple-weather-analysis.code-workspace
 
 # Ruff stuff:
 .ruff_cache/
